# snowflake4cxx

./: CMakeLists.txt  README.md
snowflake4cxx/: CMakeLists.txt  id.cc  id.h
